implement new 2.5 Goal Lines Strategy

--- a/25GoalLines-All-Matches.html
+++ b/25GoalLines-All-Matches.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <title>DH - All Matches</title>
+  <title>2,5 Goal Lines - All Matches</title>
   <link rel="stylesheet" href="css/nicepage.css" media="screen">
   <link rel="stylesheet" href="css/Team-Info-Page.css" media="screen">
   <script class="u-script" type="text/javascript" src="javascript/jquery.js" "="" defer=""></script>
@@ -14,10 +14,10 @@
   <script class=" u-script" type="text/javascript" src="javascript/constants.js"></script>
   <script class=" u-script" type="text/javascript" src="javascript/common/sortTables.js"></script>
   <script type="text/javascript">
-    var currentStrategy = DRAWS_HUNTER_ID;
+    var currentStrategy = GOAL_LINES_ID;
   </script>
-        <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
-        <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
+  <link rel="stylesheet" href="css/modalDialogBox.css" media="screen">
+  <script class="u-script" type="text/javascript" src="javascript/common/modalDialogBox.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="javascript/common/coreAPIcalls.js" defer=""></script>
   <script class=" u-script" type="text/javascript" src="javascript/AllMatches.js" "="" defer=""></script>
     <meta name=" generator" content="Nicepage 4.16.0, nicepage.com">
@@ -42,11 +42,8 @@
 		"name": "BetStratV2",
 		"logo": "images/logo-no-background.png"
 }</script>
-  <script type="text/javascript">
-    var currentStrategy = DRAWS_HUNTER_ID;
-  </script>
   <meta name="theme-color" content="#efa69d">
-  <meta property="og:title" content="DH - All Matches">
+  <meta property="og:title" content="25GoalLines - All Matches">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
 </head>
@@ -82,37 +79,37 @@
                 href="index.html" style="padding: 10px;">Home</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-              style="padding: 10px;color: black !important;">Strategies 🠻</a>
-            <div class="u-nav-popup">
-              <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
-                <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
-              </li>
-              <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
-              </li>
-              <li class="u-nav-item"><a
-                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                  href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
-              </li>
-              <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
+                style="padding: 10px;color: black !important;">Strategies 🠻</a>
+              <div class="u-nav-popup">
+                <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
+                  </li>
+                  <li class="u-nav-item"><a
+                      class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                      href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
+                  </li>
+                </ul>
+              </div>
             </li>
-              </ul>
-            </div>
-          </li>
             <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                 href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
             </li>
             <li class="u-nav-item"><a
-              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-              href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
-          </li>
+                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
+            </li>
           </ul>
         </div>
         <div class="u-nav-container-collapse">
@@ -123,21 +120,21 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 20px;">Home</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" >Strategies 🠻</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link">Strategies 🠻</a>
                   <div class="u-nav-popup">
                     <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
                       <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
-                        style="padding: 10px 20px;">Only Draws</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
-                        style="padding: 10px 20px;">Euro Handicap</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
-                        style="padding: 10px 20px;">Draws Hunter</a>
-                    </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
-                      style="padding: 10px 20px;">2,5 Goal Lines</a>
-                  </li>
+                          style="padding: 10px 20px;">Only Draws</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
+                          style="padding: 10px 20px;">Euro Handicap</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
+                          style="padding: 10px 20px;">Draws Hunter</a>
+                      </li>
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
+                          style="padding: 10px 20px;">2,5 Goal Lines</a>
+                      </li>
                     </ul>
                   </div>
                 </li>
@@ -145,8 +142,8 @@
                     style="padding: 10px 20px;">Bankrolls</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="HistoricStatsData.html"
-                  style="padding: 10px 20px;">Historic Stats</a>
-              </li>
+                    style="padding: 10px 20px;">Historic Stats</a>
+                </li>
               </ul>
             </div>
           </div>
@@ -167,35 +164,70 @@
     <div class="u-clearfix u-sheet u-sheet-1"><span
         class="u-file-icon u-icon u-icon-rectangle u-text-palette-4-dark-2 u-icon-1" onclick="history.back()"><img
           src="images/17699-278f9150.png" alt="" style="cursor: pointer;"></span>
-      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;"><b>DRAWS HUNTER - List of all matches
+      <h4 class="u-text u-text-default u-text-1" style="text-shadow: none;"><b>2,5 GOAL LINES - List of all matches
           played</b></h4>
       <!-- <h3 class="u-text u-text-default u-text-1">Team Name</h3> -->
       <div class="u-table u-table-responsive u-table-1" style="margin-top: 30px;">
-        <table class="u-table-entity" id="dhMatchesTable">
+        <table class="u-table-entity" id="25MatchesTable">
           <colgroup>
             <col width="6.6%">
-            <col width="9.4%">
-            <col width="31.1%">
-            <col width="11.4%">
-            <col width="9.2%">
-            <col width="7.3%">
-            <col width="9.3%">
-            <col width="15.799999999999994%">
+            <col width="8.4%">
+            <col width="42.5%">
+            <col width="13%">
+            <col width="10.4%">
+            <col width="6.5%">
+            <col width="13.7999999994%">
           </colgroup>
           <thead class="u-custom-font u-font-source-sans-pro u-grey-50 u-table-header u-table-header-1">
             <tr style="height: 30px;">
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">DELETE</th>
-              <th onclick="sortTable(1,'dhMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Date</th>
-              <th onclick="sortTable(2,'dhMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Match</th>
-              <th onclick="sortTable(3,'dhMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Final Result</th>
-              <th onclick="sortTableNumbers(4,'dhMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Odd</th>
-              <th onclick="sortTableNumbers(5,'dhMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Stake</th>
-              <th onclick="sortTableNumbers(6,'dhMatchesTable')" class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Seq Level</th>
+              <th onclick="sortTable(1,'odMatchesTable')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">Date</th>
+              <th onclick="sortTable(2,'odMatchesTable')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">Match</th>
+                <th onclick="sortTable(3,'odMatchesTable')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">Bet Type</th>
+              <th onclick="sortTable(4,'odMatchesTable')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">Final Result</th>
+              <th onclick="sortTableNumbers(5,'odMatchesTable')" class="u-table-cell"
+                style="padding-top: 0; padding-bottom: 0;">Odd</th>
               <th class="u-table-cell" style="padding-top: 0; padding-bottom: 0;">Update Match</th>
             </tr>
           </thead>
           <tbody
             class="u-align-left u-custom-font u-font-source-sans-pro u-table-alt-grey-15 u-table-body all-matches-table">
+            <!-- <tr style=" background-color: '+matchBackgroundColor(match)+';">
+              <td style="padding-top: 0; padding-bottom: 0;"
+                class="u-border-1 u-border-grey-40 u-border-no-left u-border-no-right u-table-cell">
+                <form><input class="deleteBtn" type=button value="❌" style="max-width:80%; position: center;"></form>
+              </td>
+              <td style="padding-top: 0; padding-bottom: 0;"
+                class="u-border-1 u-border-grey-40 u-border-no-left u-border-no-right u-table-cell"> match.date </td>
+              <td style="padding-top: 0; padding-bottom: 0;"
+                class="u-border-1 u-border-grey-40 u-border-no-left u-border-no-right u-table-cell"
+                style="text-align: center;"><b>match.homeTeam + &nbsp &nbsp - &nbsp &nbsp + match.awayTeam </b></td>
+                <td style="padding-top: 0; padding-bottom: 0;"
+                class="u-border-1 u-border-grey-40 u-border-no-left u-border-no-right u-table-cell"> OVER
+              </td>
+                <td style="padding-top: 0; padding-bottom: 0;"
+                class="u-border-1 u-border-grey-40 u-border-no-left u-border-no-right u-table-cell"> match.ftresult
+              </td>
+              <td style="padding-top: 0; padding-bottom: 0;"
+                class="u-border-1 u-border-grey-40 u-border-no-left u-border-no-right u-table-cell"> match.odd </td>
+              <td style="padding-top: 0; padding-bottom: 0;"
+                class="u-border-1 u-border-grey-40 u-border-no-left u-border-no-right u-table-cell">
+                <table>
+                  <tr>
+                    <td style="padding: 0px;"><input id="ftresult' + idMatch + '" type="text" placeholder="result"
+                        class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white u-input-1"
+                        required="required" style="padding-top: 0; padding-bottom: 0; max-width: 90%;"></td>
+                    <td>
+                      <form><input class="updateBtn" type=button value="✔️" style="width:100%"></form>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr> -->
 
           </tbody>
         </table>
