--- a/DH-All-Teams.html
+++ b/DH-All-Teams.html
@@ -45,7 +45,7 @@
         data-image-height="265" title="Home">
         <img src="images/logo-no-background.png" class="u-logo-image u-logo-image-1">
       </a>
-      <nav class="u-menu u-menu-one-level u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="MD">
+      <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
           <a class="u-button-style u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
             href="#">
@@ -69,25 +69,37 @@
                 href="index.html" style="padding: 10px;">Home</a>
             </li>
             <li class="u-nav-item"><a
+              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+              style="padding: 10px;color: black !important;">Strategies 🠻</a>
+            <div class="u-nav-popup">
+              <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
+                <li class="u-nav-item"><a
+                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                  href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
+              </li>
+              <li class="u-nav-item"><a
+                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                  href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
+              </li>
+              <li class="u-nav-item"><a
+                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                  href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
+              </li>
+              <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
+                href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
             </li>
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
-            </li>
+              </ul>
+            </div>
+          </li>
             <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                 href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
             </li>
             <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
-            </li>
+              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+              href="HistoricStatsData.html" style="padding: 10px;">Historic Stats</a>
+          </li>
           </ul>
         </div>
         <div class="u-nav-container-collapse">
@@ -98,21 +110,30 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 20px;">Home</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
-                    style="padding: 10px 20px;">Only Draws</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
-                    style="padding: 10px 20px;">Euro Handicap</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
-                    style="padding: 10px 20px;">Draws Hunter</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" >Strategies 🠻</a>
+                  <div class="u-nav-popup">
+                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
+                        style="padding: 10px 20px;">Only Draws</a>
+                    </li>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
+                        style="padding: 10px 20px;">Euro Handicap</a>
+                    </li>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
+                        style="padding: 10px 20px;">Draws Hunter</a>
+                    </li>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
+                      style="padding: 10px 20px;">2,5 Goal Lines</a>
+                  </li>
+                    </ul>
+                  </div>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bankrolls.html"
                     style="padding: 10px 20px;">Bankrolls</a>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="HistoricStatsData.html"
-                    style="padding: 10px 20px;">Historic Stats</a>
-                </li>
+                  style="padding: 10px 20px;">Historic Stats</a>
+              </li>
               </ul>
             </div>
           </div>
