--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         data-image-height="265" title="Home">
         <img src="images/logo-no-background.png" class="u-logo-image u-logo-image-1">
       </a>
-      <nav class="u-menu u-menu-one-level u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="MD">
+      <nav class="u-menu u-menu-dropdown u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="MD">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
           <a class="u-button-style u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
             href="#">
@@ -62,17 +62,29 @@
                 href="index.html" style="padding: 10px;">Home</a>
             </li>
             <li class="u-nav-item"><a
+              class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+              style="padding: 10px;color: black !important;">Strategies 🠻</a>
+            <div class="u-nav-popup">
+              <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
+                <li class="u-nav-item"><a
+                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                  href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
+              </li>
+              <li class="u-nav-item"><a
+                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                  href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
+              </li>
+              <li class="u-nav-item"><a
+                  class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
+                  href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
+              </li>
+              <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="Only-Draws.html" style="padding: 10px;">Only Draws</a>
+                href="25GoalLines.html" style="padding: 10px;">2,5 Goal Lines</a>
             </li>
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="Euro-Handicap.html" style="padding: 10px;">Euro Handicap</a>
-            </li>
-            <li class="u-nav-item"><a
-                class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
-                href="Draws-Hunter.html" style="padding: 10px;">Draws Hunter</a>
-            </li>
+              </ul>
+            </div>
+          </li>
             <li class="u-nav-item"><a
                 class="u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-palette-3-dark-1 u-text-grey-90 u-text-hover-palette-5-dark-1"
                 href="Bankrolls.html" style="padding: 10px;">Bankrolls</a>
@@ -91,14 +103,23 @@
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html"
                     style="padding: 10px 20px;">Home</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
-                    style="padding: 10px 20px;">Only Draws</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
-                    style="padding: 10px 20px;">Euro Handicap</a>
-                </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
-                    style="padding: 10px 20px;">Draws Hunter</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" >Strategies 🠻</a>
+                  <div class="u-nav-popup">
+                    <ul class="u-h-spacing-20 u-nav u-unstyled u-v-spacing-10">
+                      <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Only-Draws.html"
+                        style="padding: 10px 20px;">Only Draws</a>
+                    </li>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Euro-Handicap.html"
+                        style="padding: 10px 20px;">Euro Handicap</a>
+                    </li>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Draws-Hunter.html"
+                        style="padding: 10px 20px;">Draws Hunter</a>
+                    </li>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="25GoalLines.html"
+                      style="padding: 10px 20px;">2,5 Goal Lines</a>
+                  </li>
+                    </ul>
+                  </div>
                 </li>
                 <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Bankrolls.html"
                     style="padding: 10px 20px;">Bankrolls</a>
@@ -125,7 +146,7 @@
   <section class="u-align-center u-clearfix u-grey-15 u-section-1" src="" id="carousel_deab">
     <div class="u-align-left u-clearfix u-sheet u-sheet-1">
       <div class="u-list u-list-1">
-        <div class="u-repeater u-repeater-1">
+        <div class="u-repeater u-repeater-1" style="margin-bottom: 150px;">
           <div class="u-align-left u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Only-Draws.html">
               <a
@@ -149,6 +170,12 @@
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-1" data-href="25GoalLines.html">
+              <a
+                class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">2,5 Goal Lines</a>
+            </div>
+          </div>
+          <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1" data-href="Bankrolls.html">
               <a
                 class="u-align-center u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-source-sans-pro u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-1" style="width: 300px !important;">Bankrolls</a>
@@ -162,7 +189,7 @@
           </div>
         </div>
       </div>
-      <a onclick="getBackup()"
+      <!-- <a onclick="getBackup()"
         class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-4-dark-2 u-palette-3-dark-1 u-radius-50 u-btn-5"><span
           class="u-icon u-icon-1"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px"
             style="width: 1em; height: 1em;">
@@ -171,7 +198,7 @@
             </path>
             <path d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z"></path>
           </svg><img></span>&nbsp;backup data
-      </a>
+      </a> -->
     </div>
   </section>
 
